update autoint add acorn

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,14 +1,30 @@
 ---
 ---
 
-@article{lindell2020autoint,
+@article{martel2021acorn,
+abbr={SIGGRAPH},
+author = {Martel, Julien N.P. and Lindell, David B. and Lin, Connor Z. and Chan, Eric R. and Monteiro, Marco and Wetzstein, Gordon},
+title = {ACORN: Adaptive Coordinate Networks for Neural Representation},
+journal = {ACM Trans. Graph. (SIGGRAPH)},
+year = {2021},
+thumbnail={siggraph2021martel.png},
+html={acorn},
+video={https://www.youtube.com/watch?v=P192X3J6cg4},
+code={https://github.com/computational-imaging/acorn},
+pdf={https://arxiv.org/abs/2105.02788},
+selected={true}
+}
+
+@inproceedings{lindell2021autoint,
+  abbr={CVPR},
   title={AutoInt: Automatic Integration for Fast Neural Volume Rendering},
   author={Lindell, D. B.* and Martel, J. N. P.* and Wetzstein, G.},
-  journal={arXiv preprint arXiv:2012.01714},
-  year={2020},
-  thumbnail={arxiv2020lindell.png},
+  year={2021},
+  booktitle={IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+  thumbnail={cvpr2021lindell.png},
   html={autoint},
   video={https://www.youtube.com/watch?v=GYxFYbih0PU},
+  code={https://github.com/computational-imaging/automatic-integration},
   pdf={https://arxiv.org/abs/2012.01714},
   selected={true}
 }
