--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,19 @@
 ---
 ---
 
+@article{lindell2021bacon,
+abbr={arXiv},
+author = {Lindell, David B. and Van Veen, Dave and Park, Jeong Joon and Wetzstein, Gordon},
+title = {BACON: Band-limited coordinate networks for multiscale scene representation},
+journal = {arXiv},
+year={2021},
+thumbnail={arxiv2021lindell.png},
+html={bacon},
+video={https://www.youtube.com/watch?v=zIH3KUCgJEA},
+pdf={http://arxiv.org/abs/2112.04645},
+selected={true}
+}
+
 @article{martel2021acorn,
 abbr={SIGGRAPH},
 author = {Martel, Julien N.P. and Lindell, David B. and Lin, Connor Z. and Chan, Eric R. and Monteiro, Marco and Wetzstein, Gordon},
