add code link for bacon

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,6 +10,7 @@ year={2021},
 thumbnail={arxiv2021lindell.png},
 html={bacon},
 video={https://www.youtube.com/watch?v=zIH3KUCgJEA},
+code={https://github.com/computational-imaging/bacon},
 pdf={http://arxiv.org/abs/2112.04645},
 selected={true}
 }
