update news, pubs

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,13 +1,13 @@
 ---
 ---
 
-@article{lindell2021bacon,
-abbr={arXiv},
+@inproceedings{lindell2022bacon,
+abbr={CVPR},
 author = {Lindell, David B. and Van Veen, Dave and Park, Jeong Joon and Wetzstein, Gordon},
 title = {BACON: Band-limited coordinate networks for multiscale scene representation},
-journal = {arXiv},
-year={2021},
-thumbnail={arxiv2021lindell.png},
+booktitle = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+year={2022},
+thumbnail={cvpr2022lindell.png},
 html={bacon},
 video={https://www.youtube.com/watch?v=zIH3KUCgJEA},
 code={https://github.com/computational-imaging/bacon},
