--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,9 +1,44 @@
 ---
 ---
 
+@article{lin2022arxiv,
+abbr={arXiv},
+author = {Bergman, A. W. and Kellnhofer, P. and Yifan, W. and Chan, E. R. and Wetzstein, G.},
+title = {Generative Neural Articulated Radiance Fields},
+journal = {arXiv},
+year = {2022},
+thumbnail={arxiv2022bergman.png},
+html={https://www.computationalimaging.org/publications/gnarf/},
+pdf={https://arxiv.org/abs/2206.14314},
+}
+
+@inproceedings{zhao2022icml,
+abbr={ICML},
+author = {Zhou, Q. and Lindell, D. B. and Wetzstein, G.},
+title = {Learning to Solve PDE-Constrained Inverse Problems with Graph Networks},
+booktitle = {International Conference on Machine Learning (ICML)},
+year={2022},
+thumbnail={icml2022zhao.png},
+html={https://cyanzhao42.github.io/LearnInverseProblem},
+video={https://www.youtube.com/watch?v=ov0jxa4xHGU},
+pdf={https://arxiv.org/abs/2206.00711},
+}
+
+@article{lin2022arxiv,
+abbr={arXiv},
+author = {Lin, C. Z. and Lindell, D. B. and Wetzstein, G.},
+title = {3D GAN Inversion for Controllable Portrait Image Animation},
+journal = {arXiv},
+year = {2022},
+thumbnail={arxiv2022lin.png},
+html={https://www.computationalimaging.org/publications/3dganinversion/},
+video={https://www.youtube.com/watch?v=57X71J2hpLM},
+pdf={https://arxiv.org/abs/2203.13441},
+}
+
 @inproceedings{lindell2022bacon,
 abbr={CVPR},
-author = {Lindell, David B. and Van Veen, Dave and Park, Jeong Joon and Wetzstein, Gordon},
+author = {Lindell, D. B. and Van Veen, D. and Park, J. J. and Wetzstein, G.},
 title = {BACON: Band-limited coordinate networks for multiscale scene representation},
 booktitle = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
 year={2022},
@@ -17,7 +52,7 @@ selected={true}
 
 @article{martel2021acorn,
 abbr={SIGGRAPH},
-author = {Martel, Julien N.P. and Lindell, David B. and Lin, Connor Z. and Chan, Eric R. and Monteiro, Marco and Wetzstein, Gordon},
+author = {Martel, Julien N.P. and Lindell, David B. and Lin, Connor Z. and Chan, Eric R. and Monteiro, M. and Wetzstein, G.},
 title = {ACORN: Adaptive Coordinate Networks for Neural Representation},
 journal = {ACM Trans. Graph. (SIGGRAPH)},
 year = {2021},
@@ -41,6 +76,20 @@ selected={true}
   code={https://github.com/computational-imaging/automatic-integration},
   pdf={https://arxiv.org/abs/2012.01714},
   selected={true}
+}
+
+@article{metzler2021keyhole,
+  abbr={Trans. Comput. Imaging},
+  title={Keyhole Imaging: Non-line-of-sight Imaging and Tracking of Moving Objects Along a Single Optical Path},
+  author={Metzler, C. M. and Lindell, D. B. and Wetzstein, G.},
+  journal={IEEE Transactions on Computational Imaging},
+  year={2021},
+  volume={7},
+  thumbnail={tci2021metzler.jpg},
+  html={https://www.computationalimaging.org/publications/keyhole-imaging/},
+  video={https://www.youtube.com/watch?v=Veo27qhrI20},
+  code={https://github.com/computational-imaging/KeyholeImaging},
+  pdf={https://arxiv.org/abs/1912.06727},
 }
 
 @article{lindell2020three,
