--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -81,7 +81,7 @@ selected={true}
 @article{metzler2021keyhole,
   abbr={Trans. Comput. Imaging},
   title={Keyhole Imaging: Non-line-of-sight Imaging and Tracking of Moving Objects Along a Single Optical Path},
-  author={Metzler, C. M. and Lindell, D. B. and Wetzstein, G.},
+  author={Metzler, C. A. and Lindell, D. B. and Wetzstein, G.},
   journal={IEEE Transactions on Computational Imaging},
   year={2021},
   volume={7},
