--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,7 +14,7 @@ pdf={https://arxiv.org/abs/2206.14314},
 
 @inproceedings{zhao2022icml,
 abbr={ICML},
-author = {Zhou, Q. and Lindell, D. B. and Wetzstein, G.},
+author = {Zhao, Q. and Lindell, D. B. and Wetzstein, G.},
 title = {Learning to Solve PDE-Constrained Inverse Problems with Graph Networks},
 booktitle = {International Conference on Machine Learning (ICML)},
 year={2022},
