--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @article{lin2022arxiv,
 abbr={arXiv},
-author = {Bergman, A. W. and Kellnhofer, P. and Yifan, W. and Chan, E. R. and Wetzstein, G.},
+author = {Bergman, A. W. and Kellnhofer, P. and Yifan, W. and Chan, E. R. and Lindell, David B. and Wetzstein, G.},
 title = {Generative Neural Articulated Radiance Fields},
 journal = {arXiv},
 year = {2022},
