--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,13 +1,24 @@
 ---
 ---
 
-@article{lin2022arxiv,
-abbr={arXiv},
+@inproceedings{shekarforoush2022residual,
+  abbr={NeurIPS},
+  title={Residual Multiplicative Filter Networks for Multiscale Reconstruction},
+  author={Shekarforoush, Shayan and Lindell, David B. and Fleet, David J. and Brubaker, Marcus A.},
+  booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
+  year={2022},
+  thumbnail={neurips2022shayan.png},
+  html={https://shekshaa.github.io/ResidualMFN/},
+  pdf={https://arxiv.org/abs/2206.00746},
+}
+
+@inproceedings{bergman2022generative,
+abbr={NeurIPS},
 author = {Bergman, A. W. and Kellnhofer, P. and Yifan, W. and Chan, E. R. and Lindell, David B. and Wetzstein, G.},
 title = {Generative Neural Articulated Radiance Fields},
-journal = {arXiv},
+booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
 year = {2022},
-thumbnail={arxiv2022bergman.png},
+thumbnail={neurips2022bergman.png},
 html={https://www.computationalimaging.org/publications/gnarf/},
 pdf={https://arxiv.org/abs/2206.14314},
 }
@@ -24,13 +35,12 @@ video={https://www.youtube.com/watch?v=ov0jxa4xHGU},
 pdf={https://arxiv.org/abs/2206.00711},
 }
 
-@article{lin2022arxiv,
-abbr={arXiv},
+@inproceedings{lin2022arxiv,
 author = {Lin, C. Z. and Lindell, D. B. and Wetzstein, G.},
 title = {3D GAN Inversion for Controllable Portrait Image Animation},
-journal = {arXiv},
+booktitle = {ECCV Learn3DG Workshop},
 year = {2022},
-thumbnail={arxiv2022lin.png},
+thumbnail={eccv2022lin.png},
 html={https://www.computationalimaging.org/publications/3dganinversion/},
 video={https://www.youtube.com/watch?v=57X71J2hpLM},
 pdf={https://arxiv.org/abs/2203.13441},
