--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,15 @@
 ---
 ---
+@inproceedings{sinha2023sparsepose,
+  abbr={CVPR},
+  title={SparsePose: Sparse-View Camera Pose Regression and Refinement},
+  author={Samarth Sinha and Jason Y. Zhang and Andrea Tagliasacchi and Igor Gilitschenski and  David B. Lindell},
+  booktitle={IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year={2023},
+  thumbnail={cvpr2023sinha.png},
+  html={https://sparsepose.github.io/},
+  pdf={https://arxiv.org/abs/2211.16991},
+}
 
 @inproceedings{shekarforoush2022residual,
   abbr={NeurIPS},
@@ -14,7 +24,7 @@
 
 @inproceedings{bergman2022generative,
 abbr={NeurIPS},
-author = {Bergman, A. W. and Kellnhofer, P. and Yifan, W. and Chan, E. R. and Lindell, David B. and Wetzstein, G.},
+author = {Bergman, A. W. and Kellnhofer, P. and Yifan, W. and Chan, E. R. and Lindell, David B. and Wetzstein, Gordon},
 title = {Generative Neural Articulated Radiance Fields},
 booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
 year = {2022},
@@ -25,7 +35,7 @@ pdf={https://arxiv.org/abs/2206.14314},
 
 @inproceedings{zhao2022icml,
 abbr={ICML},
-author = {Zhao, Q. and Lindell, D. B. and Wetzstein, G.},
+author = {Zhao, Qingqing and Lindell, David B. and Wetzstein, Gordon},
 title = {Learning to Solve PDE-Constrained Inverse Problems with Graph Networks},
 booktitle = {International Conference on Machine Learning (ICML)},
 year={2022},
@@ -36,7 +46,7 @@ pdf={https://arxiv.org/abs/2206.00711},
 }
 
 @inproceedings{lin2022arxiv,
-author = {Lin, C. Z. and Lindell, D. B. and Wetzstein, G.},
+author = {Lin, Connor Z. and Lindell, David B. and Wetzstein, Gordon},
 title = {3D GAN Inversion for Controllable Portrait Image Animation},
 booktitle = {ECCV Learn3DG Workshop},
 year = {2022},
@@ -48,7 +58,7 @@ pdf={https://arxiv.org/abs/2203.13441},
 
 @inproceedings{lindell2022bacon,
 abbr={CVPR},
-author = {Lindell, D. B. and Van Veen, D. and Park, J. J. and Wetzstein, G.},
+author = {Lindell, David B. and Van Veen, Dave and Park, J. J. and Wetzstein, Gordon},
 title = {BACON: Band-limited coordinate networks for multiscale scene representation},
 booktitle = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
 year={2022},
@@ -62,7 +72,7 @@ selected={true}
 
 @article{martel2021acorn,
 abbr={SIGGRAPH},
-author = {Martel, Julien N.P. and Lindell, David B. and Lin, Connor Z. and Chan, Eric R. and Monteiro, M. and Wetzstein, G.},
+author = {Martel, Julien N. P. and Lindell, David B. and Lin, Connor Z. and Chan, Eric R. and Monteiro, M. and Wetzstein, G.},
 title = {ACORN: Adaptive Coordinate Networks for Neural Representation},
 journal = {ACM Trans. Graph. (SIGGRAPH)},
 year = {2021},
@@ -77,7 +87,7 @@ selected={true}
 @inproceedings{lindell2021autoint,
   abbr={CVPR},
   title={AutoInt: Automatic Integration for Fast Neural Volume Rendering},
-  author={Lindell, D. B.* and Martel, J. N. P.* and Wetzstein, G.},
+  author={Lindell*, David B. and Martel*, Julien N. P. and Wetzstein, Gordon},
   year={2021},
   booktitle={IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   thumbnail={cvpr2021lindell.png},
@@ -91,7 +101,7 @@ selected={true}
 @article{metzler2021keyhole,
   abbr={Trans. Comput. Imaging},
   title={Keyhole Imaging: Non-line-of-sight Imaging and Tracking of Moving Objects Along a Single Optical Path},
-  author={Metzler, C. A. and Lindell, D. B. and Wetzstein, G.},
+  author={Metzler, Christopher A. and Lindell, David B. and Wetzstein, Gordon},
   journal={IEEE Transactions on Computational Imaging},
   year={2021},
   volume={7},
@@ -105,7 +115,7 @@ selected={true}
 @article{lindell2020three,
   abbr={Nat. Commun.},
   title={Three-Dimensional Imaging Through Scattering Media based on Confocal Diffuse Tomography},
-  author={Lindell, D. B. and Wetzstein, G.},
+  author={Lindell, David B. and Wetzstein, Gordon},
   journal={Nature Communications},
   year={2020},
   volume={11},
@@ -120,7 +130,7 @@ selected={true}
 
 @inproceedings{sitzmann2020siren,
     abbr={NeurIPS},
-    author = {Sitzmann, V. and Martel, J. N. P. and Bergman, A. W. and Lindell, D. B. and Wetzstein, G.},
+    author = {Sitzmann, Vincent and Martel, Julien N. P. and Bergman, Alexander W. and Lindell, David B. and Wetzstein, Gordon},
     title = {Implicit Neural Representations
               with Periodic Activation Functions},
     booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
@@ -137,7 +147,7 @@ selected={true}
 @inproceedings{nishimura2020,
   abbr={ECCV},
   title={Disambiguating Monocular Depth Estimation with a Single Transient},
-  author={M. Nishimura and D. B. Lindell and C. Metzler and G. Wetzstein},
+  author={Mark Nishimura and David B. Lindell and Christopher A. Metzler and Gordon Wetzstein},
   booktitle={European Conference on Computer Vision (ECCV)},
   year={2020},
   thumbnail={eccv2020nishimura.jpg},
@@ -150,7 +160,7 @@ selected={true}
 @inproceedings{bergman2020deep,
   abbr={ICCP},
   title={Deep Adaptive {LiDAR}: End-to-end Optimization of Sampling and Depth Completion at Low Sampling Rates},
-  author={Bergman, A. W. and Lindell, D. B. and Wetzstein, G.},
+  author={Bergman, Alexander W. and Lindell, David B. and Wetzstein, Gordon},
   booktitle={IEEE International Conference on Computational Photography (ICCP)},
   year={2020},
   thumbnail={iccp2020bergman.png},
@@ -161,7 +171,7 @@ selected={true}
 
 @inproceedings{young2020,
 abbr={CVPR},
-author = {Young, S. I. and Lindell, D. B. and B. Girod and D. Taubman and G. Wetzstein},
+author = {Young, Sean I. and Lindell, David B. and Bernd Girod and David Taubman and Gordon Wetzstein},
 title = {Non-Line-of-Sight Surface Reconstruction using the Directional Light-Cone Transform},
 booktitle = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
 addendum = {\bf{(Oral)}},
@@ -179,7 +189,7 @@ pdf={http://www.computationalimaging.org/wp-content/uploads/2020/03/dlct_cvpr202
 @article{sun2020spadnet,
   abbr={Opt. Express},
   title={{SPADnet}: Deep {RGB-SPAD} Sensor Fusion Assisted by Monocular Depth Estimation},
-  author={Sun, Z. and Lindell, D. B. and Solgaard, O. and Wetzstein, G.},
+  author={Sun, Zhanghao and Lindell, David B. and Solgaard, Olav and Wetzstein, Gordon},
   journal={Optics Express},
   volume={28},
   number={10},
@@ -194,7 +204,7 @@ pdf={http://www.computationalimaging.org/wp-content/uploads/2020/03/dlct_cvpr202
 
 @article{lindell2019fk,
 abbr={SIGGRAPH},
-author = {Lindell, D. B. and G. Wetzstein and O'Toole, M.},
+author = {Lindell, David B. and Gordon Wetzstein and O'Toole, Matthew},
 title = {Wave-Based Non-Line-of-Sight Imaging using Fast $f--k$ Migration},
 journal = {ACM Trans. Graph. (SIGGRAPH)},
 year={2019},
@@ -212,7 +222,7 @@ selected={true},
 
 @inproceedings{lindell2019acoustic,
 abbr={CVPR},
-author = {Lindell, D. B. and G. Wetzstein and Koltun, V.},
+author = {Lindell, David B. and Gordon Wetzstein and Koltun, Vladlen},
 title = {Acoustic Non-Line-of-Sight Imaging},
 booktitle = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
 addendum = {\bf{(Oral)}},
@@ -229,7 +239,7 @@ pdf={http://www.computationalimaging.org/wp-content/uploads/2019/03/cvpr_2019_20
 
 @article{heide2019,
 abbr={ACM TOG},
-author = {F. Heide and M. O'Toole and K. Zang and Lindell, D. B. and S. Diamond and G. Wetzstein},
+author = {Felix Heide and Matthew O'Toole and Kai Zang and Lindell, David B. and Steven Diamond and Gordon Wetzstein},
 title = {Non-Line-of-Sight Imaging with Partial Occluders and Surface Normals},
 journal = {ACM Trans. Graph.},
 year={2019},
@@ -245,7 +255,7 @@ pdf={https://drive.google.com/file/d/1JpuUYYrNvTlYyunvsVrBJZRdDJ5SVEed/view}
 
 @article{Lindell20183d,
 abbr={SIGGRAPH},
-author = {Lindell, D. B. and M. O’Toole and G. Wetzstein},
+author = {Lindell, David B. and Matthew O’Toole and Gordon Wetzstein},
 title = {Single-Photon {3D} Imaging with Deep Sensor Fusion},
 journal = {ACM Trans. Graph. (SIGGRAPH)},
 year = {2018},
@@ -261,7 +271,7 @@ pdf={https://drive.google.com/file/d/1eTIawad7GFob3p5nuxrDcO7FMtL3AzSt/view}
 
 @article{heide2018,
 abbr={Sci. Rep.},
-author = {Heide, F. and Diamond, S. and Lindell, D. B. and Wetzstein, G.},
+author = {Heide, Felix and Diamond, Steven and Lindell, David B. and Wetzstein, Gordon},
 title = {Sub-Picosecond Photon-Efficient {3D} Imaging Using Single-Photon Sensors},
 journal = {Scientific Reports},
 year = {2018},
@@ -276,7 +286,7 @@ pdf={https://www.nature.com/articles/s41598-018-35212-x}
 
 @article{otoole2018,
 abbr={Nature},
-author = {M. O’Toole and Lindell, D. B. and G. Wetzstein},
+author = {Matthew O’Toole and Lindell, David B. and Gordon Wetzstein},
 title = {Confocal Non-Line-of-Sight Imaging Based on the Light Cone Transform},
 journal = {Nature},
 year = {2018},
@@ -294,7 +304,7 @@ pdf={https://www.nature.com/articles/doi:10.1038/nature25489}
 
 @inproceedings{lindell2018spad,
 abbr={ICCP},
-author = {Lindell, D. B. and M. O’Toole and G. Wetzstein},
+author = {Lindell, David B. and Matthew O’Toole and Gordon Wetzstein},
 title = {Towards Transient Imaging at Interactive Rates with Single-Photon Detectors},
 booktitle = {IEEE International Conference on Computational Photography (ICCP)},
 year = {2018},
@@ -310,7 +320,7 @@ pdf={https://drive.google.com/a/stanford.edu/file/d/1b2Ls8bUghMl2h8gZMnhgfSYbbRH
 
 @inproceedings{otoole2017, 
 abbr={CVPR},
-author={M. O'Toole and F. Heide and Lindell, D. B. and K. Zang and S. Diamond and G. Wetzstein}, 
+author={Matthew O'Toole and Felix Heide and Lindell, David B. and Kai Zang and Steven Diamond and Gordon Wetzstein}, 
 _venue={CVPR},
 booktitle={IEEE Conference on Computer Vision and Pattern Recognition (CVPR)}, 
 addendum = {\bf{(Spotlight)}},
@@ -328,7 +338,7 @@ pdf={http://www.computationalimaging.org/wp-content/uploads/2017/08/17.cvpr_.spa
 
 @article{lindell2016soil, 
 abbr={TGRS},
-author={D. B. Lindell and D. G. Long}, 
+author={David B. Lindell and David G. Long}, 
 journal={IEEE Geosci. Remote Sens. Lett.}, 
 _venue={GRSL},
 title={High-Resolution Soil Moisture Retrieval With {ASCAT}}, 
@@ -344,7 +354,7 @@ pdf={https://ieeexplore.ieee.org/document/7466093}
 
 @article{lindell2016ascat,
 abbr={Remote Sens.},
-author = {Lindell, D. B. and Long, D. G.},
+author = {Lindell, David B. and Long, David G.},
 title = {Multiyear {A}rctic Ice Classification Using {ASCAT} and {SSMIS}},
 _venue={MDPI},
 journal = {Remote Sensing},
@@ -359,7 +369,7 @@ pdf={https://www.mdpi.com/2072-4292/8/4/294}
 
 @article{lindell2015oscat, 
 abbr={TGARS},
-author={D. B. Lindell and D. G. Long}, 
+author={David B. Lindell and David G. Long}, 
 journal={IEEE Trans. Geosci. Remote Sens.}, 
 title={Multiyear {A}rctic Sea Ice Classification Using {OSCAT} and {QuikSCAT}}, 
 _venue={TGARS},
