--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,46 @@
 ---
 ---
+
+@article{malik2023transient,
+  abbr={arXiv},
+  title={Transient Neural Radiance Fields for Lidar View Synthesis and 3D Reconstruction},
+  author={Malik, Anagh and Mirdehghan, Parsa and Nousias, Sotiris and Kutulakos, Kiriakos N and Lindell, David B.},
+  journal={arXiv preprint arXiv:2307.09555},
+  year={2023},
+  thumbnail={arxiv2023malik.png},
+  selected={true}
+}
+
+@article{shentu2023moss,
+    abbr={arXiv},
+  title={MoSS: Monocular Shape Sensing for Continuum Robots},
+  author={Shentu, Chengnan and Li, Enxu and Chen, Chaojun and Dewi, Puspita Triana and Lindell, David B. and Burgner-Kahrs, Jessica},
+  journal={arXiv preprint arXiv:2303.00891},
+  year={2023},
+  thumbnail={arxiv2023shentu.png}
+}
+
+@inproceedings{gulve2023dual,
+    abbr={ISSCC},
+  title={Dual-Port CMOS Image Sensor with Regression-Based HDR Flux-to-Digital Conversion and 80ns Rapid-Update Pixel-Wise Exposure Coding},
+  author={Gulve, Rahul and Rangel, Roberto and Barman, Ayandev and Nguyen, Don and Wei, Mian and Sakr, Motasem A. and Sun, Xiaonong and Lindell, David B. and Kutulakos, Kiriakos N. and Genov, Roman},
+  booktitle={IEEE International Solid-State Circuits Conference (ISSCC)},
+  thumbnail={isscc2023gulve.png},
+  pdf={https://ieeexplore.ieee.org/document/10067708},
+  year={2023},
+}
+
+@inproceedings{shekarforoush2022residual,
+  abbr={NeurIPS},
+  title={Residual Multiplicative Filter Networks for Multiscale Reconstruction},
+  author={Shekarforoush, Shayan and Lindell, David B. and Fleet, David J. and Brubaker, Marcus A.},
+  booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
+  year={2022},
+  thumbnail={neurips2022shayan.png},
+  html={https://shekshaa.github.io/ResidualMFN/},
+  pdf={https://arxiv.org/abs/2206.00746},
+}
+
 @inproceedings{sinha2023sparsepose,
   abbr={CVPR},
   title={SparsePose: Sparse-View Camera Pose Regression and Refinement},
