--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,9 @@
   journal={arXiv preprint arXiv:2307.09555},
   year={2023},
   thumbnail={arxiv2023malik.png},
+  pdf={https://arxiv.org/abs/2307.09555},
+  html={https://anaghmalik.com/TransientNeRF/},
+  video={https://www.youtube.com/watch?v=m1sc4-h7ma8},
   selected={true}
 }
 
@@ -17,6 +20,8 @@
   author={Shentu, Chengnan and Li, Enxu and Chen, Chaojun and Dewi, Puspita Triana and Lindell, David B. and Burgner-Kahrs, Jessica},
   journal={arXiv preprint arXiv:2303.00891},
   year={2023},
+  pdf={https://arxiv.org/abs/2303.00891},
+  html={https://crl.utm.utoronto.ca/publications/2023-03-02.html},
   thumbnail={arxiv2023shentu.png}
 }
 
