update pubs and news

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,12 +1,28 @@
 ---
 ---
 
-@article{malik2023transient,
-  abbr={arXiv},
+@inproceedings{wei2023passive,
+  abbr={ICCV},
+  title={Passive Ultra-Wideband Single-Photon Imaging},
+  author={Mian Wei and Sotiris Nousias and Rahul Gulve and David B. Lindell and Kiriakos N. Kutulakos},
+  booktitle={ICCV},
+  year={2023},
+  note={Oral Presentation},
+  thumbnail={iccv2023wei.png},
+  pdf={https://appleswithacapitala.github.io/static/docs/paper.pdf},
+  html={https://appleswithacapitala.github.io/},
+  video={https://appleswithacapitala.github.io/static/docs/supp/iccv-final.mp4},
+  selected={true}
+}
+
+
+@inproceedings{malik2023transient,
+  abbr={NeurIPS},
   title={Transient Neural Radiance Fields for Lidar View Synthesis and 3D Reconstruction},
   author={Malik, Anagh and Mirdehghan, Parsa and Nousias, Sotiris and Kutulakos, Kiriakos N and Lindell, David B.},
-  journal={arXiv preprint arXiv:2307.09555},
+  booktitle={NeurIPS},
   year={2023},
+  note={Spotlight},
   thumbnail={arxiv2023malik.png},
   pdf={https://arxiv.org/abs/2307.09555},
   html={https://anaghmalik.com/TransientNeRF/},
@@ -18,7 +34,7 @@
     abbr={arXiv},
   title={MoSS: Monocular Shape Sensing for Continuum Robots},
   author={Shentu, Chengnan and Li, Enxu and Chen, Chaojun and Dewi, Puspita Triana and Lindell, David B. and Burgner-Kahrs, Jessica},
-  journal={arXiv preprint arXiv:2303.00891},
+  journal={arXiv},
   year={2023},
   pdf={https://arxiv.org/abs/2303.00891},
   html={https://crl.utm.utoronto.ca/publications/2023-03-02.html},
@@ -29,7 +45,7 @@
     abbr={ISSCC},
   title={Dual-Port CMOS Image Sensor with Regression-Based HDR Flux-to-Digital Conversion and 80ns Rapid-Update Pixel-Wise Exposure Coding},
   author={Gulve, Rahul and Rangel, Roberto and Barman, Ayandev and Nguyen, Don and Wei, Mian and Sakr, Motasem A. and Sun, Xiaonong and Lindell, David B. and Kutulakos, Kiriakos N. and Genov, Roman},
-  booktitle={IEEE International Solid-State Circuits Conference (ISSCC)},
+  booktitle={ISSCC},
   thumbnail={isscc2023gulve.png},
   pdf={https://ieeexplore.ieee.org/document/10067708},
   year={2023},
@@ -39,7 +55,7 @@
   abbr={NeurIPS},
   title={Residual Multiplicative Filter Networks for Multiscale Reconstruction},
   author={Shekarforoush, Shayan and Lindell, David B. and Fleet, David J. and Brubaker, Marcus A.},
-  booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
+  booktitle={NeurIPS},
   year={2022},
   thumbnail={neurips2022shayan.png},
   html={https://shekshaa.github.io/ResidualMFN/},
@@ -50,7 +66,7 @@
   abbr={CVPR},
   title={SparsePose: Sparse-View Camera Pose Regression and Refinement},
   author={Samarth Sinha and Jason Y. Zhang and Andrea Tagliasacchi and Igor Gilitschenski and  David B. Lindell},
-  booktitle={IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+  booktitle={CVPR},
   year={2023},
   thumbnail={cvpr2023sinha.png},
   html={https://sparsepose.github.io/},
@@ -61,7 +77,7 @@
   abbr={NeurIPS},
   title={Residual Multiplicative Filter Networks for Multiscale Reconstruction},
   author={Shekarforoush, Shayan and Lindell, David B. and Fleet, David J. and Brubaker, Marcus A.},
-  booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
+  booktitle={NeurIPS},
   year={2022},
   thumbnail={neurips2022shayan.png},
   html={https://shekshaa.github.io/ResidualMFN/},
@@ -72,7 +88,7 @@
 abbr={NeurIPS},
 author = {Bergman, A. W. and Kellnhofer, P. and Yifan, W. and Chan, E. R. and Lindell, David B. and Wetzstein, Gordon},
 title = {Generative Neural Articulated Radiance Fields},
-booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
+booktitle = {NeurIPS},
 year = {2022},
 thumbnail={neurips2022bergman.png},
 html={https://www.computationalimaging.org/publications/gnarf/},
@@ -83,7 +99,7 @@ pdf={https://arxiv.org/abs/2206.14314},
 abbr={ICML},
 author = {Zhao, Qingqing and Lindell, David B. and Wetzstein, Gordon},
 title = {Learning to Solve PDE-Constrained Inverse Problems with Graph Networks},
-booktitle = {International Conference on Machine Learning (ICML)},
+booktitle = {ICML},
 year={2022},
 thumbnail={icml2022zhao.png},
 html={https://cyanzhao42.github.io/LearnInverseProblem},
@@ -106,13 +122,14 @@ pdf={https://arxiv.org/abs/2203.13441},
 abbr={CVPR},
 author = {Lindell, David B. and Van Veen, Dave and Park, J. J. and Wetzstein, Gordon},
 title = {BACON: Band-limited coordinate networks for multiscale scene representation},
-booktitle = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+booktitle = {CVPR},
 year={2022},
 thumbnail={cvpr2022lindell.png},
 html={bacon},
 video={https://www.youtube.com/watch?v=zIH3KUCgJEA},
 code={https://github.com/computational-imaging/bacon},
 pdf={http://arxiv.org/abs/2112.04645},
+note={Oral Presentation},
 selected={true}
 }
 
@@ -135,7 +152,7 @@ selected={true}
   title={AutoInt: Automatic Integration for Fast Neural Volume Rendering},
   author={Lindell*, David B. and Martel*, Julien N. P. and Wetzstein, Gordon},
   year={2021},
-  booktitle={IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+  booktitle={CVPR},
   thumbnail={cvpr2021lindell.png},
   html={autoint},
   video={https://www.youtube.com/watch?v=GYxFYbih0PU},
@@ -166,6 +183,7 @@ selected={true}
   year={2020},
   volume={11},
   number={4517},
+  note={2020 Top 50 Physics Articles},
   thumbnail={natcommun2020lindell.png},
   html={cdt},
   video={https://www.youtube.com/watch?v=uyuCyzV0pdM},
@@ -179,8 +197,8 @@ selected={true}
     author = {Sitzmann, Vincent and Martel, Julien N. P. and Bergman, Alexander W. and Lindell, David B. and Wetzstein, Gordon},
     title = {Implicit Neural Representations
               with Periodic Activation Functions},
-    booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
-    addendum = {\bf{(Oral)}},
+    booktitle = {NeurIPS},
+    note = {Oral Presentation},
     year={2020},
     selected={true},
     thumbnail={neurips2020sitzmann.png},
@@ -194,7 +212,7 @@ selected={true}
   abbr={ECCV},
   title={Disambiguating Monocular Depth Estimation with a Single Transient},
   author={Mark Nishimura and David B. Lindell and Christopher A. Metzler and Gordon Wetzstein},
-  booktitle={European Conference on Computer Vision (ECCV)},
+  booktitle={ECCV},
   year={2020},
   thumbnail={eccv2020nishimura.jpg},
   html={monocular-spad},
@@ -207,7 +225,7 @@ selected={true}
   abbr={ICCP},
   title={Deep Adaptive {LiDAR}: End-to-end Optimization of Sampling and Depth Completion at Low Sampling Rates},
   author={Bergman, Alexander W. and Lindell, David B. and Wetzstein, Gordon},
-  booktitle={IEEE International Conference on Computational Photography (ICCP)},
+  booktitle={ICCP},
   year={2020},
   thumbnail={iccp2020bergman.png},
   html={adaptive-lidar},
@@ -219,8 +237,8 @@ selected={true}
 abbr={CVPR},
 author = {Young, Sean I. and Lindell, David B. and Bernd Girod and David Taubman and Gordon Wetzstein},
 title = {Non-Line-of-Sight Surface Reconstruction using the Directional Light-Cone Transform},
-booktitle = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
-addendum = {\bf{(Oral)}},
+booktitle = {CVPR},
+note = {Oral Presentation},
 year = {2020},
 volume={},
 number={},
@@ -270,8 +288,8 @@ selected={true},
 abbr={CVPR},
 author = {Lindell, David B. and Gordon Wetzstein and Koltun, Vladlen},
 title = {Acoustic Non-Line-of-Sight Imaging},
-booktitle = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
-addendum = {\bf{(Oral)}},
+booktitle = {CVPR},
+note = {Oral Presentation},
 year = {2019},
 volume={},
 number={},
@@ -352,7 +370,7 @@ pdf={https://www.nature.com/articles/doi:10.1038/nature25489}
 abbr={ICCP},
 author = {Lindell, David B. and Matthew O’Toole and Gordon Wetzstein},
 title = {Towards Transient Imaging at Interactive Rates with Single-Photon Detectors},
-booktitle = {IEEE International Conference on Computational Photography (ICCP)},
+booktitle = {ICCP},
 year = {2018},
 volume={},
 number={},
@@ -368,8 +386,8 @@ pdf={https://drive.google.com/a/stanford.edu/file/d/1b2Ls8bUghMl2h8gZMnhgfSYbbRH
 abbr={CVPR},
 author={Matthew O'Toole and Felix Heide and Lindell, David B. and Kai Zang and Steven Diamond and Gordon Wetzstein}, 
 _venue={CVPR},
-booktitle={IEEE Conference on Computer Vision and Pattern Recognition (CVPR)}, 
-addendum = {\bf{(Spotlight)}},
+booktitle={CVPR}, 
+note = {Spotlight},
 title={Reconstructing Transient Images from Single-Photon Sensors}, 
 year={2017}, 
 volume={},
