--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,9 +9,9 @@
   year={2023},
   note={Oral Presentation},
   thumbnail={iccv2023wei.png},
-  pdf={https://appleswithacapitala.github.io/static/docs/paper.pdf},
-  html={https://appleswithacapitala.github.io/},
-  video={https://appleswithacapitala.github.io/static/docs/supp/iccv-final.mp4},
+  pdf={https://www.dgp.toronto.edu/projects/ultra-wideband/static/docs/paper.pdf},
+  html={https://www.dgp.toronto.edu/projects/ultra-wideband/},
+  video={https://www.dgp.toronto.edu/projects/ultra-wideband/static/docs/supp/iccv-final.mp4},
   selected={true}
 }
 
