--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
   author={Mian Wei and Sotiris Nousias and Rahul Gulve and David B. Lindell and Kiriakos N. Kutulakos},
   booktitle={ICCV},
   year={2023},
-  note={Oral Presentation},
+  note={Best Paper/Marr Prize},
   thumbnail={iccv2023wei.png},
   pdf={https://www.dgp.toronto.edu/projects/ultra-wideband/static/docs/paper.pdf},
   html={https://www.dgp.toronto.edu/projects/ultra-wideband/},
