--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,30 @@
 ---
 ---
 
+@article{bahmani20234d,
+  abbr={arXiv},
+  title={4D-fy: Text-to-4D Generation Using Hybrid Score Distillation Sampling},
+  author={Bahmani, Sherwin and Skorokhodov, Ivan and Rong, Victor and Wetzstein, Gordon and Guibas, Leonidas and Wonka, Peter and Tulyakov, Sergey and Park, Jeong Joon and Tagliasacchi, Andrea and Lindell, David B.},
+  journal={arXiv preprint arXiv:2311.17984},
+  year={2023},
+  thumbnail={arxiv2023bahmani.gif},
+  pdf={https://arxiv.org/abs/2311.17984},
+  html={https://sherwinbahmani.github.io/4dfy/},
+  code={https://github.com/sherwinbahmani/4dfy}
+}
+
+@article{lin2023learning,
+  abbr={arXiv},
+  title={Learning Lens Blur Fields},
+  author={Lin, Esther Y.H. and Wang, Zhecheng and Lin, Rebecca and Miau, Daniel and Kainz, Florian and Chen, Jiawen and Zhang, Xuaner Cecilia and Lindell, David B. and Kutulakos, Kiriakos N.},
+  journal={arXiv preprint arXiv:2310.11535},
+  year={2023},
+  thumbnail={arxiv2023lin.png},
+  html={https://estherlin.github.io/blur-fields/},
+  pdf={http://arxiv.org/abs/2310.11535},
+}
+
+
 @inproceedings{wei2023passive,
   abbr={ICCV},
   title={Passive Ultra-Wideband Single-Photon Imaging},
@@ -31,11 +55,12 @@
 }
 
 @article{shentu2023moss,
-    abbr={arXiv},
+  abbr={RAL},
   title={MoSS: Monocular Shape Sensing for Continuum Robots},
-  author={Shentu, Chengnan and Li, Enxu and Chen, Chaojun and Dewi, Puspita Triana and Lindell, David B. and Burgner-Kahrs, Jessica},
-  journal={arXiv},
+  author={Shentu, Chengnan and Li, Enxu and Chen, Chaojun and Dewi, Puspita T and Lindell, David B and Burgner-Kahrs, Jessica},
+  journal={IEEE Robotics and Automation Letters},
   year={2023},
+  publisher={IEEE},
   pdf={https://arxiv.org/abs/2303.00891},
   html={https://crl.utm.utoronto.ca/publications/2023-03-02.html},
   thumbnail={arxiv2023shentu.png}
@@ -73,16 +98,6 @@
   pdf={https://arxiv.org/abs/2211.16991},
 }
 
-@inproceedings{shekarforoush2022residual,
-  abbr={NeurIPS},
-  title={Residual Multiplicative Filter Networks for Multiscale Reconstruction},
-  author={Shekarforoush, Shayan and Lindell, David B. and Fleet, David J. and Brubaker, Marcus A.},
-  booktitle={NeurIPS},
-  year={2022},
-  thumbnail={neurips2022shayan.png},
-  html={https://shekshaa.github.io/ResidualMFN/},
-  pdf={https://arxiv.org/abs/2206.00746},
-}
 
 @inproceedings{bergman2022generative,
 abbr={NeurIPS},
