update cv, pubs

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,12 +1,36 @@
 ---
 ---
 
-@article{bahmani20234d,
+@article{malik2024flying,
   abbr={arXiv},
+  title={Flying With Photons: Rendering Novel Views of Propagating Light},
+  author={Malik, Anagh and Juravsky, Noah and Po, Ryan and Wetzstein, Gordon and Kutulakos, Kiriakos N and Lindell, David B},
+  journal={arXiv preprint arXiv:2404.06493},
+  year={2024},
+  thumbnail={arxiv2024malik.gif},
+  pdf={http://arxiv.org/abs/2404.06493},
+  html={https://anaghmalik.com/FlyingWithPhotons/},
+  code={https://github.com/anaghmalik/FlyingWithPhotons}
+}
+
+@article{bahmani2024tc4d,
+  abbr={arXiv},
+  title={{TC4D}: Trajectory-Conditioned Text-to-{4D} Generation},
+  author={Bahmani, Sherwin and Liu, Xian and Wang, Yifan and Skorokhodov, Ivan and Rong, Victor and Liu, Ziwei and Liu, Xihui and Park, Jeong Joon and Tulyakov, Sergey and Wetzstein, Gordon and Tagliasacchi, Andrea and Lindell, David B},
+  journal={arXiv preprint arXiv:2403.17920},
+  year={2024},
+  thumbnail={arxiv2024bahmani.gif},
+  pdf={https://arxiv.org/abs/2403.17920},
+  html={https://sherwinbahmani.github.io/tc4d/},
+  code={https://github.com/sherwinbahmani/tc4d}
+}
+
+@inproceedings{bahmani20234d,
+  abbr={CVPR},
   title={4D-fy: Text-to-4D Generation Using Hybrid Score Distillation Sampling},
   author={Bahmani, Sherwin and Skorokhodov, Ivan and Rong, Victor and Wetzstein, Gordon and Guibas, Leonidas and Wonka, Peter and Tulyakov, Sergey and Park, Jeong Joon and Tagliasacchi, Andrea and Lindell, David B.},
-  journal={arXiv preprint arXiv:2311.17984},
-  year={2023},
+  booktitle={CVPR},
+  year={2024},
   thumbnail={arxiv2023bahmani.gif},
   pdf={https://arxiv.org/abs/2311.17984},
   html={https://sherwinbahmani.github.io/4dfy/},
